--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <!-- featured tea card container -->
             <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4">
                 <!-- first card -->
-                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] ">
                     <figure><img src="./images/tea-1.png" alt="tea-1" /></figure>
                     <div class="card-body justify-center">
                       <h2 class="text-2xl font-bold">Milk Tea</h2>
@@ -92,7 +92,7 @@
                     </div>
                   </div>
                 <!-- second card -->
-                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] ">
                     <figure><img src="./images/tea-2.png" alt="tea-1" /></figure>
                     <div class="card-body justify-center">
                       <h2 class="text-2xl font-bold">Milk Tea</h2>
@@ -101,7 +101,7 @@
                     </div>
                   </div>
                 <!-- third card -->
-                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] ">
                     <figure><img src="./images/tea-3.png" alt="tea-1" /></figure>
                     <div class="card-body justify-center">
                       <h2 class="text-2xl font-bold">Milk Tea</h2>
@@ -110,7 +110,7 @@
                     </div>
                   </div>
                 <!-- fourth card -->
-                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] shadow-xl">
+                <div class="card p-8 bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] ">
                     <figure><img src="./images/tea-4.png" alt="tea-1" /></figure>
                     <div class="card-body justify-center">
                       <h2 class="text-2xl font-bold">Milk Tea</h2>
@@ -119,6 +119,26 @@
                     </div>
                   </div>
             </div>
+        </section>
+        <!-- great tea fresh tea section -->
+        <section class="my-24 gap-12 flex flex-col lg:flex-row">
+          <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+            <div class="rounded-xl opacity-10 h-36 bg-gradient-to-r from-[#F00] to-[#FF8938]"></div>
+            <div class="row-span-2 px-8 py-12 bg-[#EBA6231A] rounded-lg flex justify-center items-center">
+              <img src="./images/fresh-1.png" alt=""></div>
+              <div class="row-span-2 px-8 py-12 bg-[#5738761A] rounded-lg flex justify-center items-center">
+                <img src="./images/fresh-2.png" alt=""></div>
+                <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF00]"></div>
+          </div>
+          <div class="space-y-5 flex-1">
+            <h3 class="text-5xl font-extrabold">Great Tea, 
+              Freshly <br> 
+              Presented</h3>
+              <p>The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+              <h4 class="text-xl font-extrabold">Unique Taste</h4>
+              <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+              <h4 class="text-xl font-extrabold mt-8">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+          </div>
         </section>
     </main>
     <footer></footer>
