--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <img src="./images/fresh-2.png" alt=""></div>
                 <div class="rounded-xl h-36 bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF00]"></div>
           </div>
-          <div class="space-y-5 flex-1">
+          <div class="space-y-5 flex-1 pr-3 pl-3 lg:p-0">
             <h3 class="text-5xl font-extrabold">Great Tea, 
               Freshly <br> 
               Presented</h3>
@@ -138,6 +138,49 @@
               <h4 class="text-xl font-extrabold">Unique Taste</h4>
               <p>A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
               <h4 class="text-xl font-extrabold mt-8">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+          </div>
+        </section>
+        <!-- super client section -->
+        <section class="my-24 flex flex-col gap-12 lg:flex-row rounded-xl bg-gradient-to-r from-[#FF8938] to-[#F00] px-16 py-24 ">
+          <div class="flex items-center lg:pr-28">
+            <div class="space-y-5">
+            <h2 class="text-5xl text-white font-extrabold">Meet Our Super <br> Clients</h2>
+            <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            <button class="btn btn-outline">Show All</button>
+          </div>
+        </div>
+          <!-- review container -->
+          <div class="relative">
+            <!-- next review -->
+            <div class="relative mb-16 z-10 opacity-40 p-10 rounded-lg bg-white">
+              <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="./images/client.png" alt="">
+              <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h4 class="font-bold mt-5">Ilham Yuda</h4>
+              <p class="font-medium">Businessman</p>
+              <div class="flex justify-end">
+                <img src="./images/circles.png" alt="">
+              </div>
+            </div>
+            <!-- current review -->
+            <div class="absolute top-40 z-20 lg:-left-24 lg:w-[430px] p-10 rounded-lg bg-white">
+              <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="./images/client.png" alt="">
+              <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h4 class="font-bold mt-5">Ilham Yuda</h4>
+              <p class="font-medium">Businessman</p>
+              <div class="flex justify-end">
+                <img src="./images/circles.png" alt="">
+              </div>
+            </div>
+            <!-- previous review -->
+            <div class="relative opacity-40 z-10 p-10 rounded-lg bg-white">
+              <img class="absolute -top-5 -left-5 border-4 border-white rounded-full bg-white" src="./images/client.png" alt="">
+              <p>We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h4 class="font-bold mt-5">Ilham Yuda</h4>
+              <p class="font-medium">Businessman</p>
+              <div class="flex justify-end">
+                <img src="./images/circles.png" alt="">
+              </div>
+            </div>
           </div>
         </section>
     </main>
